--- a/TaskManagement.BLL/TaskManager.BLL.csproj
+++ b/TaskManagement.BLL/TaskManager.BLL.csproj
@@ -19,7 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TaskManagement.Domain\TaskManager.Domain.csproj" />
+    <ProjectReference Include="..\TaskManager.Infrastructure\TaskManager.Infrastructure.csproj" />
+    <ProjectReference Include="..\TaskManager.Persistence\TaskManager.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
