--- a/TaskManager.Infrastructure/TaskManager.Infrastructure.csproj
+++ b/TaskManager.Infrastructure/TaskManager.Infrastructure.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.16" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\TaskManagement.BLL\TaskManager.BLL.csproj" />
+	  <ProjectReference Include="..\TaskManagement.Domain\TaskManager.Domain.csproj" />
 	</ItemGroup>
 </Project>
