--- a/TaskManager.Infrastructure/TaskManager.Infrastructure.csproj
+++ b/TaskManager.Infrastructure/TaskManager.Infrastructure.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.5" />
 		<PackageReference Include="Hangfire.Core" Version="1.8.5" />
 		<PackageReference Include="Hangfire.SqlServer" Version="1.8.5" />
+		<PackageReference Include="MailKit" Version="4.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.16" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
